chore: tricked openapi schema to use hack suggested at https://github.com/deepmap/oapi-codegen/issues/1139
