# services/radars/openapi/main.yaml
@@ -91,6 +91,49 @@ paths:
 components:
   schemas:
     Radar:
-      $ref: './components/schemas/Radar.yaml'
+      required:
+        - uniq_id
+        - title
+        - created_at
+        - updated_at
+      type: object
+      properties:
+        uniq_id:
+          type: string
+          example: 0ujsswThIGTUYm2K8FjOOfXtY1K
+        title:
+          type: string
+          example: My radar
+        items:
+          type: array
+          items:
+            $ref: '#/components/schemas/RadarItem'
+        created_at:
+          type: string
+          format: date-time
+        updated_at:
+          type: string
+          format: date-time
     RadarItem:
-      $ref: './components/schemas/RadarItem.yaml'
+      required:
+        - uniq_id
+        - name
+        - description
+        - quadrant
+        - created_at
+        - updated_at
+      type: object
+      properties:
+        uniq_id:
+          type: string
+          example: 0ujsswThIGTUYm2K8FjOOfXtY1K
+        name:
+          type: string
+        description:
+          type: string
+        created_at:
+          type: string
+          format: date-time
+        updated_at:
+          type: string
+          format: date-time
